# internal/handler/user/register.go
@@ -10,7 +10,7 @@ import (
 	"github.com/homework/lab/pkg/response"
 )
 
-// RegisterLink      Register link
+// RegisterLink     godoc
 // @Summary      Register user
 // @Description  Register user
 // @Tags         user
@@ -18,20 +18,22 @@ import (
 // @Produce      application/json
 // @Param        input body userModel.UserRegister true "Input required"
 // @Success      200 {object} api.Response[userModel.UserInfo]
+// @Failure      400  {object}  api.Response[any]
+// @Failure      500  {object}  api.Response[any]
 // @Router       /v1/users/register [post]
 func (u *userHandler) Register(c *gin.Context) {
 	userRequest := &userModel.UserRegister{}
 	if err := c.ShouldBindJSON(userRequest); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": response.ToDataResponse[any](err)})
+		c.JSON(http.StatusBadRequest, response.ToDataResponse[any](err))
 		return
 	}
 	createdUser, err := u.svc.Register(c, *userRequest)
 	if err == user_service.ServiceErr.EmailExistError || err == user_service.ServiceErr.UserNameExistError {
-		c.JSON(http.StatusConflict, gin.H{"error": response.ToDataResponse[any](err)})
+		c.JSON(http.StatusConflict, response.ToDataResponse[any](err))
 		return
 	}
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": response.ToDataResponse[any](err)})
+		c.JSON(http.StatusInternalServerError, response.ToDataResponse[any](err))
 		return
 	}
 
